docs-archive/apache-airflow-providers-common-ai/0.1.1/_sources/_api/airflow/providers/common/ai/example_dags/example_pydantic_ai_hook/index.rst.txt
airflow.providers.common.ai.example_dags.example_pydantic_ai_hook
=================================================================

.. py:module:: airflow.providers.common.ai.example_dags.example_pydantic_ai_hook

.. autoapi-nested-parse::

   Example DAGs demonstrating PydanticAIHook and direct pydantic-ai Agent usage.



Functions
---------

.. autoapisummary::

   airflow.providers.common.ai.example_dags.example_pydantic_ai_hook.example_pydantic_ai_hook
   airflow.providers.common.ai.example_dags.example_pydantic_ai_hook.example_pydantic_ai_structured_output
   airflow.providers.common.ai.example_dags.example_pydantic_ai_hook.example_task_with_toolsets


Module Contents
---------------

.. py:function:: example_pydantic_ai_hook()

.. py:function:: example_pydantic_ai_structured_output()

.. py:function:: example_task_with_toolsets()

   Use toolsets directly in a @task function without AgentOperator.


